--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 
+   <nav aria-label="...">
+        <ul class="pager">
+            <li class="previous{% if not prev_url %} disabled{% endif %}">
+                <a href="{{ prev_url or '#' }}">
+                    <span aria-hidden="true">&larr;</span> Newer posts
+                </a>
+            </li>
+            <li class="next{% if not next_url %} disabled{% endif %}">
+                <a href="{{ next_url or '#' }}">
+                    Older posts <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
      {% if form %}
@@ -23,4 +37,4 @@
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
-{% endblock %}
+{% endblock %}z
